0.4

  Add diffing capability to meld nodes.  The file 'melddiff.py' shows an
  example of using the diff API.

  Add a 'meldid()' method to elements.  This returns None if the element
  has no meld id, otherwise it returns the id.

  Add a 'fillmeld(**kw)' method to elements.  This does the same thing
  as '__mod__' but returns meld ids (the keys of **kw) that cannot be
  found anywhere in the tree.

0.3

  Fix broken example.py file.

  Add ZPT-alike methods on elements: 'content', 'replace', and
  'attributes'.  'content' replaces the node's content; 'replace'
  replaces the node itself with a text value, and 'attributes' sets
  the attributes of the node.  Using the ElementTree API to do the
  same things usually causes the code to run faster, but these
  functions are more convenient and more easily grokked by ZPT people.

  Override __delitem__ on meld elements in order to relieve deleted
  items of their parent pointers.

  Strip all xhtml namespace identifiers out of XHTML output.  Browsers
  just can't deal with this.

  Undocumented element API method 'remove' renamed to 'deparent' (it
  was shadowing an ElementTree API method).

  Documentation improvements and change examples to use ZPT-alike
  methods.

  Add support for HTML input files.  Input files don't need to be
  strictly well-formed XML anymore.

  Remove the 'parse' top-level function in favor of explicit separate
  xml parsing and html parsing functions.

  Add 'parse_xml' and 'parse_html' top-level parsing functions.

  Add 'parse_xmlstring' and 'parse_htmlstring' module-scope functions
  which calls their respective 'parse_xxx' function with a StringIO
  containing the passed text.


0.2

  Use a method on elements to do writing rather than requiring a user
  call a "write" function.  The equivalent is now a method of the
  element named "write_xml".  element.write_xml(file) performs a write
  of XML into the file.  element.write_xml(...) includes an XML